5.2.0 (14-07-2020)
- New Fixture: Support multiple restrictions in academic debt generation rule

5.1.1 (08-07-2020)
- Bug Fix: On copy tuition payment plans, set correct dates in installments regarding the new execution interval

5.1.0 (07-07-2020)
- New Fixture: Copy academic debt generation rules between execution intervals
- New Fixture: Copy tuition payment plans between execution intervals
- Refactor: Retrieve student's statutes in execution year by his registration

5.0.4 (25-05-2020)
- Refactor: Method to retrieve all academic debt generation rule entries of tuition type

5.0.3 (13-05-2020)
- Bug Fix: Portuguese translation in labels
- Refactor: Listener to detect when FinantialEntity is deleted in order to disconect relations
- Bug Fix: Fix AcademicDebtGenerationRule edition in fields of minimum amount to generate payment reference code

5.0.2 (07-05-2020)
- Bug Fix: fix typos in bundles

5.0.1 (05-05-2020)
- Improvement: Force creation of tuitions with the academic debt generation rules

5.0.0 (24-04-2020)
- Refactor: Remove web files, spring controllers and bennu specific classes leaving domain classes

4.6.1 (08-04-2020)
- Refactor: Setting the debit note due date with the maximum due date of debit entries is performed in the debit note close operation

4.6.0 (06-04-2020)
- Refactor: Remove monthly interest calculation's configuration from the tuition and academic tariffs

4.5.1 (04-04-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (removal of organizational Units subclasses)

4.5.0 (26-03-2020)
- Refactor: To split fenixedu-treasury module in domain and ui module, change IForwardPaymentController package
- Refactor: Get IForwardPaymentController by class registration by online payments implementation

4.4.9 (17-03-2020)
- Refactor: Upgrade parent artifact id version

4.4.8 (09-03-2020)
- Improvement: SIBS OPPWA: default address fields
- Bug Fix: In Person delete listener, delete the active person customer if defined