@@ -1,3 +1,5 @@
+- Refactor: Disable excludeifMatches for now to evaluate if it is necessary
+
 5.2.0 (14-07-2020)
 - New Fixture: Support multiple restrictions in academic debt generation rule
 
